[package]
name = "metaprogramming"
version = "0.1.0"
authors = ["Chen-Pang He (https://jdh8.org)"]
edition = "2021"
description = "Port C++ metaprogramming to Rust"
repository = "https://github.com/jdh8/metaprogramming"
license = "MPL-2.0"
categories = ["rust-patterns", "no-std"]
keywords = ["type-traits", "cpp", "cxx"]